--- a/stickyNotes/index.html
+++ b/stickyNotes/index.html
@@ -7,8 +7,8 @@
     <title>Welcome Page</title>
 </head>
 <body>
-    <h1>Thanh Ngo</h1>
-    <h1>AD - SBA - HTML/CSS/JavaScript</h1>
+    <h1 style="color:purple";>Thanh Ngo</h1>
+    <h1 style="background-color: royalblue;">AD - SBA - HTML/CSS/JavaScript</h1>
     <strong><a href="login.html">Click here to see my project!</a></strong>
 </body>
 </html>
