--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1 style="color:purple";>Thanh Ngo</h1>
     <h1 style="background-color: royalblue;">AD - SBA - HTML/CSS/JavaScript</h1>
-    <strong><a href="login.html">Click here to see my project!</a></strong>
+    <strong><a href="stickyNotes.html">Click here to see my project!</a></strong>
 </body>
 </html>
