--- a/stickyNotes.html
+++ b/stickyNotes.html
@@ -19,11 +19,10 @@
             <button class="btn btn-success" onclick="typeNote()">Create Note</button>
         </div>
         <ul>
-            <li>Click on Create Notes</li>
-            <li>Write some notes</li>
-            <li>Click on the check-icon to display notes</li>
-            <li>Click on x-icon to close</li>
+            <li>Click on Create Notes; Write some notes</li>
+            <li>Click on the check-icon to display notes; Click on x-icon to close</li>
         </ul>
+        <a href="login.html">Click here to login-form</a>
         <!-- =============== -->
         <!-- container2 will add dynamically through JavaScript -->
         <div class="container2"></div>
